GRAD-22: Implement API refresh token
